--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
       run: npm run build
 
     - name: Deploy                  # S3에 배포하기
-    - uses: awact/s3-action@master  
+      uses: awact/s3-action@master  
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
