--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,6 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - name: Checkout code
@@ -28,10 +27,6 @@ jobs:
       with:
         node-version: 18.x
         cache: 'npm'
-        
-#     - run: npm i
-#     - run: npm run build --if-present
-#     - run: npm test
     
     - name: Install dependencies
       run: npm i
@@ -41,12 +36,22 @@ jobs:
 
     - name: Deploy                  # S3에 배포하기
       uses: awact/s3-action@master  
-      with:
-        args: --acl public-read --follow-symlinks --delete
       env:
-        SOURCE_DIR: './build'
-        AWS_REGION: 'ap-northeast-2'
-        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        # SOURCE_DIR: './build'
+        # AWS_REGION: 'ap-northeast-2'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        
+        run: |
+          aws s3 cp \
+            --recursive \
+            --region ap-northeast-2 \
+            build s3://${{ secrets.AWS_S3_BUCKET }}
+
+    - name: Invalidate CloudFront Cache      # 새로 리소스를 업데이트할 때 기존 캐시 무효화
+      uses: chetan/invalidate-cloudfront-action@v2
+      env:
+        DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_ID }}
+        PATHS: '/*'
+        AWS_REGION: 'ap-northeast-2'
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
