--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,8 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Invalidate CloudFront Cache   # 새로 리소스를 업데이트할 때 기존 캐시 무효화
-      uses: chetan/invalidate-cloudfront-action@master
       env:
-        AWS_DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_ID }}
-        PATHS: '/index.html'
-      continue-on-error: true
+        CLOUD_FRONT_ID: ${{ secrets.AWS_CLOUDFRONT_ID }}
+      run: |
+        aws cloudfront create-invalidation \
+          --distribution-id $CLOUD_FRONT_ID --paths /*
