--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,13 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18.x
-        cache: 'npm'
+        cache: 'yarn'
     
     - name: Install dependencies
-      run: npm i
+      run: yarn install
       
     - name: Build                   # React Build
-      run: npm run build
+      run: yarn build
 
     - name: Deploy                  # S3에 배포하기
       uses: awact/s3-action@master  
@@ -48,6 +48,5 @@ jobs:
         CLOUD_FRONT_ID: ${{ secrets.AWS_CLOUDFRONT_ID }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        aws cloudfront create-invalidation \
-          --distribution-id $CLOUD_FRONT_ID --paths /*
+      run: 
+        aws cloudfront create-invalidation --distribution-id $CLOUD_FRONT_ID --paths "/*"
