--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,4 @@ jobs:
 
     - name: Invalidate CloudFront Cache   # 새로 리소스를 업데이트할 때 기존 캐시 무효화
       run: 
-        aws cloudfront create-invalidation --distribution-id  ${{ secrets.AWS_CLOUDFRONT_ID }} --paths /*
+        aws cloudfront create-invalidation --distribution-id  ${{ secrets.AWS_CLOUDFRONT_ID }} --paths /index.html /*
