--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    - name: Invalidate CloudFront Cache   # 새로 리소스를 업데이트할 때 기존 캐시 무효화
-      run: 
-        aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths /index.html
+    - name: Invalidate CloudFront Cache  # 새로 리소스를 업데이트할 때 기존 캐시 무효화
+      run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/*"
+      env:
+        AWS_REGION: 'ap-northeast-2'
